レイアウトを再度調整

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <style TYPE="text/css">
 #area {
 	position: relative;
-	max-width: 750px;
-	max-height: 750px;
+	width: 700px;
 }
 </style>
 <title>Drag and Drop</title>
